--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,28 @@ body{
     font-family: "Roboto", sans-serif;
     color: #434455;
     background: #fff;
+    margin: 0;
 }
  
 ul{
     list-style-type: none;
+    margin: 0;
+    padding-left: 0;
 }
 
 a{ 
     text-decoration: none;
 }
+section{
+padding: 120px auto;
+}
+
+.container{
+max-width: 1158px;
+padding: 0;
+margin: 0;
+}
+
         /*    HEADER */
 .logo{
     font-family: "Raleway", sans-serif;
