--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,15 @@ ul{
 a{ 
     text-decoration: none;
 }
-section{
-padding: 120px auto;
+
+img{
+    display: block;
 }
 
 .container{
 max-width: 1158px;
-padding: 0;
-margin: 0;
+padding: 0 15px;
+margin: 0 auto;
 }
 
         /*    HEADER */
@@ -32,11 +33,27 @@ margin: 0;
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4d5ae5
+    color: #4d5ae5;
+    padding: 24px 0;
 }
 
 .logo-style{
     color: #2e2f42;
+}
+
+.header-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-header{
+    display: flex;
+    gap: 76px;
+}
+
+.nav-list-header{
+    display: flex;
+    gap: 40px;
 }
 
 .nav-link{
@@ -45,6 +62,8 @@ margin: 0;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
+    display: inline-block;
 }
    
 .nav-link:hover,
@@ -57,12 +76,19 @@ margin: 0;
     font-style: normal;
 }
 
+.contact-list-header{
+    display: flex ;
+    gap: 40px;
+}
+
 .contacts-link{
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
+    padding: 24px 0;
+    display: inline-block;
 }
 
 .contacts-link:hover,
@@ -81,8 +107,12 @@ margin: 0;
     font-size: 56px;
     line-height: 107%;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #fff;
+    max-width: 496px;
+    text-align: center;
+    margin-top: 0;
+    padding-top: 188px ;
+    margin-bottom: 48px;
 }
 
 .butn{
@@ -95,6 +125,9 @@ margin: 0;
     border: none;
     cursor: pointer;
     text-align: center;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin-bottom: 188px;
 }
 
 .butn:hover,
@@ -104,7 +137,10 @@ margin: 0;
 
          /*    GOALS */
 
-
+.goals-container{
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
 .title-goal{
     font-weight: 500;
     font-size: 20px;
@@ -120,10 +156,22 @@ margin: 0;
     letter-spacing: 0.02em;
     color: #434455;
 }
+.goals-list{
+    display: flex;
+    gap: 24px;
+}
+.goals-list-item{
+    width: calc((100% - 24px * 2) / 4);
+}
 
 
           /*    OUR TEAM */
 
+.team-list{
+    display: flex;
+    gap: 24px;
+    padding-bottom: 116px;
+  }        
 .team-section{
     background-color: #F4F4FD;
 }
@@ -136,6 +184,8 @@ margin: 0;
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
+    padding-top: 120px;
+    padding-bottom: 72px;
 }
   
 .bordered-team{
@@ -161,6 +211,21 @@ margin: 0;
 }
 
            /*    OUR PORTFOLIO */
+.portfolio-container{
+    padding-top: 124px;
+    padding-bottom: 120px;
+}
+
+.portfolio-item{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-list{
+    width: calc((100% - 24px * 2) / 3);
+}
 
 .title-portfolio{
     font-weight: 700;
@@ -170,8 +235,8 @@ margin: 0;
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
+    padding-bottom: 72px;
 }
-
 .apps{
     font-weight: 500;
     font-size: 20px;
@@ -186,12 +251,23 @@ margin: 0;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding-bottom: 8px;
 }
 
-      /*    FOOTER */
+.border-apps{
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+}
+    
+/*    FOOTER */
 
 footer{
     background: #2e2f42;
+}
+.container-footer{
+    padding-top: 100px;
 }
 
 .footer-text{
@@ -200,6 +276,8 @@ footer{
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    max-width: 264px;
+    padding-bottom: 100px;
 }
 
 .logo-footer{
@@ -210,6 +288,7 @@ footer{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    padding-bottom: 16px;
 }
 .logo-footer-style{
     color: #f4f4fd;
