--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,9 @@ ul{
     margin: 0;
     padding-left: 0;
 }
-
+h1, h2, h3, p{
+    margin: 0;
+}
 a{ 
     text-decoration: none;
 }
@@ -118,7 +120,8 @@ margin: 0 auto;
     text-align: center;
     margin-top: 0;
     margin-bottom: 48px;
-    margin-left: 316px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .butn{
@@ -135,7 +138,8 @@ margin: 0 auto;
     padding: 16px 32px;
     display: block;
     min-width: 169px;
-    margin-left: 480px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .butn:hover,
@@ -191,7 +195,6 @@ margin: 0 auto;
 .team-list{
     display: flex;
     gap: 24px;
-    padding-bottom: 116px;
   }        
 .team-section{
     background-color: #F4F4FD;
